[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/assets/card/cardfacewithoutnumberandrh.png" type="Texture" id=1]
[ext_resource path="res://fonts/Kollektif.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/assets/card/rainbowharmony.png" type="Texture" id=3]
[ext_resource path="res://scenes/assets/card/therealreal.png" type="Texture" id=4]
[ext_resource path="res://scenes/assets/card/dash.png" type="Texture" id=5]
[ext_resource path="res://scenes/assets/card/flower.png" type="Texture" id=6]
[ext_resource path="res://fonts/Kollektif-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/Card.gd" type="Script" id=8]
[ext_resource path="res://shaders/card.shader" type="Shader" id=9]
[ext_resource path="res://scenes/cardpanelstyleboxfrontandback.tres" type="StyleBox" id=10]
[ext_resource path="res://app icons/Heart.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.866667, 0.815686, 0.74902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.772549, 0.780392, 0.839216, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 9 )
shader_param/card_color1 = null

[sub_resource type="DynamicFont" id=3]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 9 )
shader_param/card_color1 = null

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 9 )
shader_param/card_color1 = null

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 9 )
shader_param/card_color1 = null

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 9 )
shader_param/card_color1 = null

[node name="Card" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -580.0
margin_bottom = -1120.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
card_color1 = Color( 0.87451, 0.772549, 0.537255, 1 )
card_color2 = Color( 0.498039, 0.552941, 0.698039, 1 )

[node name="Front" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Front"]
margin_right = 500.0
margin_bottom = 800.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="TextureRect" parent="Front"]
material = SubResource( 2 )
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardNumber" type="RichTextLabel" parent="Front"]
margin_left = 100.0
margin_top = 45.0
margin_right = 135.0
margin_bottom = 75.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 3 )
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RH" type="RichTextLabel" parent="Front"]
margin_left = 350.0
margin_top = 45.0
margin_right = 385.0
margin_bottom = 75.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 4 )
text = "RH"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionContainer" type="VBoxContainer" parent="Front"]
margin_left = 50.0
margin_top = 100.0
margin_right = 450.0
margin_bottom = 253.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LargeDescription" type="RichTextLabel" parent="Front/DescriptionContainer"]
margin_right = 400.0
margin_bottom = 104.0
rect_clip_content = false
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center] I want a bean feast.[/center]"
text = " I want a bean feast."
fit_content_height = true

[node name="SmallDescription" type="RichTextLabel" parent="Front/DescriptionContainer"]
margin_top = 109.0
margin_right = 400.0
margin_bottom = 153.0
rect_clip_content = false
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
text = "cream buns and donuts and fruitcake with no nuts so good you could go nuts."
fit_content_height = true

[node name="Control" type="Control" parent="Front/DescriptionContainer"]
margin_top = 158.0
margin_right = 400.0
margin_bottom = 158.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="TextureRect" parent="Front"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Control" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Back"]
margin_right = 500.0
margin_bottom = 800.0
mouse_filter = 1
custom_styles/panel = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="TextureRect" parent="Back"]
material = SubResource( 7 )
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layer2" type="TextureRect" parent="Back"]
material = SubResource( 8 )
margin_right = 400.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
texture = ExtResource( 3 )
expand = true

[node name="layer3" type="TextureRect" parent="Back"]
material = SubResource( 9 )
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
texture = ExtResource( 4 )
expand = true

[node name="layer4" type="TextureRect" parent="Back"]
material = SubResource( 10 )
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
texture = ExtResource( 5 )
expand = true

[node name="Top" type="TextureRect" parent="Back"]
visible = false
margin_left = 150.0
margin_top = 300.0
margin_right = 350.0
margin_bottom = 500.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 11 )
expand = true
